--- a/app/build.gradle
+++ b/app/build.gradle
@@ -57,4 +57,8 @@ dependencies {
 
     // Picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //Add all dependencies of RxDownload4
+    implementation "com.github.ssseasonnn:RxDownload:1.1.3"
+
 }
