--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,10 +55,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
 
-    // Picasso
-    implementation 'com.squareup.picasso:picasso:2.71828'
-
     //Add all dependencies of RxDownload4
-    implementation "com.github.ssseasonnn:RxDownload:1.1.3"
+    implementation 'com.github.ssseasonnn:RxDownload:1.1.3'
 
 }
