--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,4 +69,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha04'
     // viewModelScope:
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha04'
+
+    // Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
 }
