--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,10 +66,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     kapt "androidx.room:room-compiler:2.5.0-alpha01"
     // lifecycleScope:
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.2.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.0-beta01'
     // viewModelScope:
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.0-beta01'
 
     // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.1'
 }
